View Issue Details

IDProjectCategoryView StatusLast Update
0031088Open CASCADEOCCT:Visualizationpublic2020-12-02 17:12
Reporterkgv Assigned Toapn  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Product Version7.4.0 
Target Version7.5.0Fixed in Version7.5.0 
Summary0031088: Visualization - GL_INVALID_ENUM while dumping view within OpenGL 1.1
DescriptionDumping view with a marker fails on OpenGL 1.1.

Note that bug in code has not been introduced by OCCT 7.4.0, so that the issue was accidentally covered up by some other place in 3D Viewer resetting OpenGL errors.
Steps To Reproduce
pload VISUALIZATION
vcaps -softMode 1
vclear
vinit View1
vpoint p0 0 0 0
vdump ggg.png

Result:
Warning, on screen buffer is used for image dump - content might be invalid
TKOpenGl | Type: Other | ID: 0 | Severity: Low | Message:
  Unhandled GL error: GL_INVALID_ENUM
Fail: view dump failed!
TagsNo tags attached.
Test case number

Activities

git

2019-10-20 14:14

administrator   ~0088362

Branch CR31088 has been created by kgv.

SHA-1: f06ad3cf7193926f1b5b94d08782da6e0f8222f7


Detailed log of new commits:

Author: kgv
Date: Sun Oct 20 14:13:46 2019 +0300

    0031088: Visualization - GL_INVALID_ENUM while dumping view within OpenGL 1.1
    
    OpenGl_Sampler::resetGlobalTextureParams() - added missing version check before disabling GL_POINT_SPRITE.

git

2019-11-10 11:42

administrator   ~0088865

Branch CR31088 has been deleted by inv.

SHA-1: f06ad3cf7193926f1b5b94d08782da6e0f8222f7

Related Changesets

occt: master 97e0059b

2019-10-20 11:13:46

kgv


Committer: apn Details Diff
0031088: Visualization - GL_INVALID_ENUM while dumping view within OpenGL 1.1

OpenGl_Sampler::resetGlobalTextureParams() - added missing version check before disabling GL_POINT_SPRITE.
Affected Issues
0031088
mod - src/OpenGl/OpenGl_Sampler.cxx Diff File

Issue History

Date Modified Username Field Change
2019-10-20 13:54 kgv New Issue
2019-10-20 13:54 kgv Assigned To => kgv
2019-10-20 14:14 git Note Added: 0088362
2019-10-20 14:20 kgv Severity minor => trivial
2019-10-20 14:20 kgv Description Updated
2019-10-20 14:20 kgv Assigned To kgv => bugmaster
2019-10-20 14:20 kgv Status new => resolved
2019-10-20 14:20 kgv Status resolved => reviewed
2019-10-28 01:51 apn Changeset attached => occt master 97e0059b
2019-10-28 01:51 apn Assigned To bugmaster => apn
2019-10-28 01:51 apn Status reviewed => verified
2019-10-28 01:51 apn Resolution open => fixed
2019-11-10 11:42 git Note Added: 0088865
2020-12-02 16:40 emo Fixed in Version => 7.5.0
2020-12-02 17:12 emo Status verified => closed