0031088: Visualization - GL_INVALID_ENUM while dumping view within OpenGL 1.1

OpenGl_Sampler::resetGlobalTextureParams() - added missing version check before disabling GL_POINT_SPRITE.